Refactor State Store APIs (CORE-1285)
- Pulls up parts of the abstract state store implementation into a new
  shared abstract store
- Adds abstract global state store class
- Changes some internal datatypes to be thread-safe
- Adds missing test coverage